feat : 클래스다이어그램 적용

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,9 @@ project(IoTDB_lsm)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(IoTDB_lsm main.cpp
-        src/LSM.cpp)
+add_executable(IoTDB_lsm
+        src/core/LSM.cpp
+        tests/iotdb_test.cpp)
+
+add_subdirectory(tests)
+add_subdirectory(tests/lib/googletest-1.14.0)
