chore: Cmake에 workload file 추가

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(IoTDB_lsm
         src/disk/Disk.cpp
         src/disk/SSTable.cpp
         src/test/DataFactory.cpp
+        src/workload/workload.h
 )
 
 
