--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ add_executable(IoTDB_lsm
         src/disk/Disk.cpp
         src/disk/SSTable.cpp
         src/test/DataFactory.cpp
-        src/workload/workload.h
+        src/test/workload/Workload.h
+        src/test/workload/Workload.cpp
 )
 
 
