err: workload 실행 불가
memtable insert 주소 에러

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(IoTDB_lsm
         src/test/DataFactory.cpp
         src/workload/workload.h
         src/test/CompactionTest.cpp
+        src/test/workload/Workload.cpp
 )
 
 
