--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,13 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(IoTDB_lsm
         src/main.cpp
-        src/core/DBmanager.cpp
+        src/core/DBManager.cpp
         src/core/memtable/IMemtable.cpp
         src/core/memtable/DelayMemtable.cpp
         src/core/memtable/NormalMemtable.cpp
         src/disk/MockDisk.cpp
         src/disk/SSTable.cpp
         src/test/DataFactory.cpp
-        src/workload/workload.h
         src/test/CompactionTest.cpp
         src/test/workload/Workload.cpp
 )
