--- a/src/Makefile
+++ b/src/Makefile
@@ -1,54 +1,61 @@
 # 컴파일러 및 플래그 설정
 CXX = g++
-CXXFLAGS = -std=c++17 -I./src
+CXXFLAGS = -std=c++17 -lstdc++fs -I./src
 
-makeDataset : makeDataset.o DataFactory.o
-	$(CXX) $(CXXFLAGS) -c src/makeDataset.cpp -o makeDataset.o
-	$(CXX) $(CXXFLAGS) -c src/test/DataFactory.cpp -o DataFactory.o
-	$(CXX) -o makeDataset makeDataset.o DataFactory.o
-	
-makeWorkload: Workload.o DataFactory.o makeWorkload.o
-	$(CXX) $(CXXFLAGS) -c src/makeDataset.cpp -o makeDataset.o
-	$(CXX) $(CXXFLAGS) -c src/test/DataFactory.cpp -o DataFactory.o
-	$(CXX) $(CXXFLAGS) -c src/test/makeWorkload.cpp -o makeWorkload.o
-	$(CXX) -o makeDataset makeDataset.o DataFactory.o makeWorkload.o
-	
+# 타겟 정의
+all: makeDataset testIoTDB makeWorkload
+
+# makeDataset 타겟
+makeDataset: makeDataset.o DataFactory.o DBManager.o IMemtable.o DelayMemtable.o NormalMemtable.o MockDisk.o SSTable.o
+	$(CXX) -o makeDataset makeDataset.o DataFactory.o DBManager.o IMemtable.o DelayMemtable.o NormalMemtable.o MockDisk.o SSTable.o -lstdc++fs
+
+# testIoTDB 타겟
 testIoTDB: DBManager.o IMemtable.o DelayMemtable.o NormalMemtable.o MockDisk.o SSTable.o DataFactory.o CompactionTest.o Workload.o testIoTDB.o
-$(CXX) -o testIoTDB DBManager.o IMemtable.o DelayMemtable.o NormalMemtable.o MockDisk.o SSTable.o DataFactory.o CompactionTest.o Workload.o testIoTDB.o
-	
-DBManager.o: src/core/DBManager.cpp
-$(CXX) $(CXXFLAGS) -c src/core/DBManager.cpp -o DBManager.o
+	$(CXX) -o testIoTDB DBManager.o IMemtable.o DelayMemtable.o NormalMemtable.o MockDisk.o SSTable.o DataFactory.o CompactionTest.o Workload.o testIoTDB.o -lstdc++fs
 
-IMemtable.o: src/core/memtable/IMemtable.cpp
-$(CXX) $(CXXFLAGS) -c src/core/memtable/IMemtable.cpp -o IMemtable.o
+# makeWorkload 타겟
+makeWorkload: makeWorkload.o Workload.o DataFactory.o DBManager.o IMemtable.o DelayMemtable.o NormalMemtable.o MockDisk.o SSTable.o
+	$(CXX) -o makeWorkload makeWorkload.o Workload.o DataFactory.o DBManager.o IMemtable.o DelayMemtable.o NormalMemtable.o MockDisk.o SSTable.o -lstdc++fs
+# 개별 소스 파일을 오브젝트 파일로 컴파일하는 규칙
+makeDataset.o: makeDataset.cpp
+	$(CXX) $(CXXFLAGS) -c makeDataset.cpp -o makeDataset.o
 
-DelayMemtable.o: src/core/memtable/DelayMemtable.cpp
-$(CXX) $(CXXFLAGS) -c src/core/memtable/DelayMemtable.cpp -o DelayMemtable.o
+makeWorkload.o: makeWorkload.cpp
+	$(CXX) $(CXXFLAGS) -c makeWorkload.cpp -o makeWorkload.o
 
-NormalMemtable.o: src/core/memtable/NormalMemtable.cpp
-$(CXX) $(CXXFLAGS) -c src/core/memtable/NormalMemtable.cpp -o NormalMemtable.o
+DataFactory.o: test/DataFactory.cpp
+	$(CXX) $(CXXFLAGS) -c test/DataFactory.cpp -o DataFactory.o
 
-MockDisk.o: src/disk/MockDisk.cpp
-$(CXX) $(CXXFLAGS) -c src/disk/MockDisk.cpp -o MockDisk.o
+DBManager.o: core/DBManager.cpp
+	$(CXX) $(CXXFLAGS) -c core/DBManager.cpp -o DBManager.o
 
-SSTable.o: src/disk/SSTable.cpp
-$(CXX) $(CXXFLAGS) -c src/disk/SSTable.cpp -o SSTable.o
+IMemtable.o: core/memtable/IMemtable.cpp
+	$(CXX) $(CXXFLAGS) -c core/memtable/IMemtable.cpp -o IMemtable.o
 
-DataFactory.o: src/test/DataFactory.cpp
-$(CXX) $(CXXFLAGS) -c src/test/DataFactory.cpp -o DataFactory.o
+DelayMemtable.o: core/memtable/DelayMemtable.cpp
+	$(CXX) $(CXXFLAGS) -c core/memtable/DelayMemtable.cpp -o DelayMemtable.o
 
-CompactionTest.o: src/test/CompactionTest.cpp
-$(CXX) $(CXXFLAGS) -c src/test/CompactionTest.cpp -o CompactionTest.o
+NormalMemtable.o: core/memtable/NormalMemtable.cpp
+	$(CXX) $(CXXFLAGS) -c core/memtable/NormalMemtable.cpp -o NormalMemtable.o
 
-Workload.o: src/test/workload/Workload.cpp
-$(CXX) $(CXXFLAGS) -c src/test/workload/Workload.cpp -o Workload.o
+MockDisk.o: disk/MockDisk.cpp
+	$(CXX) $(CXXFLAGS) -c disk/MockDisk.cpp -o MockDisk.o
 
-testIoTDB.o: src/testIoTDB.cpp
-$(CXX) $(CXXFLAGS) -c src/testIoTDB.cpp -o testIoTDB.o
-	
-	
+SSTable.o: disk/SSTable.cpp
+	$(CXX) $(CXXFLAGS) -c disk/SSTable.cpp -o SSTable.o
+
+CompactionTest.o: test/CompactionTest.cpp
+	$(CXX) $(CXXFLAGS) -c test/CompactionTest.cpp -o CompactionTest.o
+
+Workload.o: test/workload/Workload.cpp
+	$(CXX) $(CXXFLAGS) -c test/workload/Workload.cpp -o Workload.o
+
+testIoTDB.o: testIoTDB.cpp
+	$(CXX) $(CXXFLAGS) -c testIoTDB.cpp -o testIoTDB.o
+
+# 클린업 타겟
 clean:
-	rm -f makeDataset
-	rm -f makeWorkload
-	rm -f testIoTDB
+	rm -f makeDataset testIoTDB makeWorkload
 	rm -f *.o
+
+.PHONY: all clean
