--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ add_executable(IoTDB_lsm
         src/test/CompactionTest.cpp
         src/test/workload/Workload.cpp
 #        src/makeDataset.cpp
-                src/testIoTDB.cpp
-#        src/makeWorkload.cpp
+#                src/testIoTDB.cpp
+        src/makeWorkload.cpp
 )
 
 
