bugfix: 진행률 오류

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ add_executable(IoTDB_lsm
         src/test/DataFactory.cpp
         src/test/CompactionTest.cpp
         src/test/workload/Workload.cpp
-        src/makeDataset.cpp
+#        src/makeDataset.cpp
 #                src/testIoTDB.cpp
-#        src/makeWorkload.cpp
+        src/makeWorkload.cpp
 )
 
 
