--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,6 @@ tests/lib/
 
 .DS_Store
 
-src/test/SSTable/
-src/test/dataset/
-src/test/SSTable/
+src/test/SSTable
+src/test/dataset
+src/test/compactionSSTable
