--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,10 @@ add_executable(IoTDB_lsm
         src/test/DataFactory.cpp
         src/test/CompactionTest.cpp
         src/test/workload/Workload.cpp
-#        src/makeDataset.cpp
-#                src/testIoTDB.cpp
-        src/makeWorkload.cpp
+        src/core/FlushController.h
+        #        src/makeDataset.cpp
+                src/testIoTDB.cpp
+#        src/makeWorkload.cpp
 )
 
 
